fix history icon alignment (#985)
* update version, split chains

* add unread counter

* align history icons

* Update notifi.css

* update npm package

--- a/v2/components/Notifi/notifi.css
+++ b/v2/components/Notifi/notifi.css
@@ -291,7 +291,8 @@ input::-webkit-inner-spin-button {
 .NotifiAlertHistory__notificationDate {
   font-size: 12px;
   line-height: normal;
-  color: var(--notifi-placeholder-color);
+  color: var(--notifi-font-color);
+  opacity: 0.7;
 }
 .NotifiAlertHistory__notificationTitle,
 .SignupBanner__Title {
@@ -312,6 +313,7 @@ input::-webkit-inner-spin-button {
   height: 18px;
   margin-right: 10px;
   color: var(--notifi-settings-icon-color);
+  margin-top: -3px;
 }
 .NotifiAlertHistory_noAlertDescription {
   font-size: 14px;
@@ -325,7 +327,8 @@ input::-webkit-inner-spin-button {
   font-size: 12px;
   line-height: normal;
   font-weight: 400;
-  color: var(--notifi-placeholder-color);
+  color: var(--notifi-font-color);
+  opacity: 0.7;
   overflow: hidden;
   white-space: pre-wrap;
   word-wrap: break-word;
